# hause-rust

./: Cargo.toml  Dockerfile  Rocket.toml
migrations/2023-01-23-171144_house/: down.sql  up.sql
src/: house.rs  main.rs  schema.rs
